--- a/css/master.css
+++ b/css/master.css
@@ -10,7 +10,12 @@ body {
 }
 
 .gridPixel {
-    border: 1px solid black;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-style: solid;
+    border-color: black;
     background-color: white;
 }
 
@@ -19,4 +24,27 @@ body {
     align-items: center;
     justify-content: center;
     padding: 10px;
+    gap: 3rem;
+}
+
+.colorPanel {
+    overflow: hidden;
+}
+
+.resetCanvasBtn, .colorPanel {
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    border: none;
+}
+
+.colorPanel > * {
+    width: 200%;
+    height: 200%;
+    transform: translate(-25%, -25%)
+}
+
+.slider {
+    width: 20vw;
+    cursor: pointer;
 }
