--- a/css/master.css
+++ b/css/master.css
@@ -31,7 +31,7 @@ body {
     overflow: hidden;
 }
 
-.resetCanvasBtn, .colorPanel {
+.resetCanvasBtn, .colorPanel, .rainbowBtn {
     border-radius: 50%;
     width: 3rem;
     height: 3rem;
@@ -47,4 +47,9 @@ body {
 .slider {
     width: 20vw;
     cursor: pointer;
+}
+
+.defaultBtn {
+    background-color: white;
+    transition: all 0.5s;
 }
